# mnist

./: .gitignore  README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_integration.py  leap_mapping.yaml  pyproject.toml  requirements.txt  temp_file.txt
inference_example/: inference_example.py
inference_example/data/: gt.npy  metadata.json  output.npy
mnist/: project_config.yaml  utils.py
mnist/data/: make_50m_dataset.py  preprocess.py
model/: model.h5
train/: train.py
