[tool.poetry]
name = "mnist"
version = "0.1.0"
description = ""
authors = ["tom Koren <tom.koren@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
code-loader = "^1.0.59"
tensorflow-io-gcs-filesystem = "0.30.0"
tensorflow = "2.11.0"
code-loader-helpers = "^1.0.13"
torch = "1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_custom_test: check_custom_test"
